contain dots (allowed when using dot-notation, forbidden otherwise),
or whether they start with a '$' sign.

It is up to the application developer to decide when to validate a
key, and what restrictions make sense in the given context.

The function does NOT do UTF-8 validation, that is completely left up
to the application developer.

* 0.1.0 - <2011-05-25 Wed>

** Shared library
The configure script now defaults to enabling shared library building
by default (along with a static library).

** Bug fixes
The pkg-config file was setting an incorrect include directory in it's
Cflags. This is now fixed.

** C++ Compatibility
The public headers are now guarded by extern "C" {} wrappers, so that
they can be included in C++ projects.

** Performance enhancements
A minor performance issue was corrected in the BSON code, that had the
possibility of forcing unneccessary memory allocations. The library
now allocates the proper amount of memory at the soonest time
possible, so it doesn't have to grow it later on unnecessarily.

Anoter performance issue was corrected in the BSON library:
bson_find() was comparing key names in BSON objects with the sought
for key using strcmp(), which was unacceptably slow when dealing with
BSON objects that have a lot of keys. We now use memcmp(), which means
we don't have to traverse the sought for key all the time.

* 0.0.2 - <2011-05-07 Sat>

** Replica set seeding support
It is now possible to add seeds to a connection, so that the library
can try connecting to those in case automatic discovery fails (or if
the seeds are hidden).

** Failover redesign
Instead of preemptively pinging & checking for a master before each
and every command, the library does so only upon errors. This way,
when everything's working as expected, there is no extra
overhead. Yet, if things go wrong, failover will still work.

By design, automatic failover only occurs when an error is detected
during a write operation. When an error occurs during read, it will be